force-app/main/default/objects/Referral__c/Referral__c.object-meta.xml
<CustomObject>
    <description>Holds the referral records in it.</description>
    <label>Referral</label>
    <nameField>
        <displayFormat>{00}</displayFormat>
        <label>Referral Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referrals</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>