force-app/main/default/objects/Referral__c/fields/Banker__c.field-meta.xml
<CustomField>
    <fullName>Banker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Banker</label>
    <referenceTo>Banker__c</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>