force-app/main/default/objects/Referral__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>referral Email</description>
    <inlineHelpText>referral Email</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>