force-app/main/default/objects/Referral__c/fields/Expressed_interest__c.field-meta.xml
<CustomField>
    <fullName>Expressed_interest__c</fullName>
    <description>product interest</description>
    <label>Expressed interest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Financial Advisory</fullName>
            </value>
            <value>
                <fullName>Home Lending</fullName>
            </value>
            <value>
                <fullName>Premier banking</fullName>
            </value>
            <value>
                <fullName>Private Banking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>