force-app/main/default/objects/Referral__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>referral Phone</description>
    <inlineHelpText>referral Phone</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>