force-app/main/default/objects/Referral__c/fields/Referral_Name__c.field-meta.xml
<CustomField>
    <fullName>Referral_Name__c</fullName>
    <description>Customer who is getting referred</description>
    <label>Referral Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>