force-app/main/default/objects/Referral__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed-Lost</fullName>
            </value>
            <value>
                <fullName>Closed-Won</fullName>
            </value>
            <value>
                <fullName>Followup</fullName>
            </value>
            <value>
                <fullName>Identify</fullName>
            </value>
            <value>
                <fullName>Inprogress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>