force-app/main/default/objects/Referral__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FirstName__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Email__c</columns>
    <columns>Expressed_interest__c</columns>
    <columns>Source__c</columns>
    <columns>Stage__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>